--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gridstack-angular",
-  "version": "0.4.0-dev",
+  "version": "0.4.0",
   "homepage": "https://github.com/kdietrich/gridstack-angular",
   "authors": [
     "Kevin Dietrich <hallo@kevin-dietrich.com>"
