--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "devDependencies": {
     "gulp": "~3.9.0",
-    "gulp-header": "~1.7.1",
     "gulp-clean": "~0.3.1",
     "gulp-concat": "~2.6.0",
+    "gulp-header": "~1.7.1",
+    "gulp-jscs": "^4.0.0",
     "gulp-jshint": "~1.11.2",
     "gulp-uglify": "~1.4.2"
   },
