--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gridstack-angular",
-  "version": "0.5.0-dev",
+  "version": "0.5.0",
   "description": "Angular Gridstack.js directive",
   "repository": {
     "type": "git",
